--- a/antlr4/Makefile
+++ b/antlr4/Makefile
@@ -1,9 +1,12 @@
 ANTLR4 = /usr/bin/java -jar /usr/local/lib/antlr-4.7.1-complete.jar
 JAVAC = /usr/bin/javac
 
-create: SimpleSql.g4
+java: SimpleSql.g4
 	${ANTLR4} $^
 	CLASSPATH=".:/usr/local/lib/antlr-4.7.1-complete.jar:$CLASSPATH" ${JAVAC} SimpleSql*.java
 
+cpp: SimpleSql.g4
+	${ANTLR4} -Dlanguage=Cpp $^
+
 clean:
-	rm -rf *.java *.class *.tokens *.interp
+	rm -rf *.java *.class *.tokens *.interp *.cpp *.h
